--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,7 @@
 @import "tailwindcss";
 
 :root {
-  --color-primary: #11131a;
-  --color-secondary: #2f6ea4;
-  --color-tertiary: #f4b15a;
   font-family: 'Space Grotesk', system-ui, sans-serif;
-  color: var(--color-primary);
-  background-color: #f4f1ec;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
 }
@@ -17,6 +12,7 @@ body {
   margin: 0;
   min-height: 100vh;
   background-color: #f4f1ec;
+  color: #11131a;
 }
 
 * {
